# FAIR-Python-script-template

./: LICENSE.md  README.md  cookiecutter.json
{{cookiecutter.__project_slug}}/: README.md  example_input.csv  pyproject.toml
{{cookiecutter.__project_slug}}/{{cookiecutter.module_name}}/: main.py  processing.py
{{cookiecutter.__project_slug}}/{{cookiecutter.module_name}}/tests/: test_processing.py
